# werkstatt-call-shared

./: .gitignore  Anforderung.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
schema/: openapi.yaml
scripts/: validate-openapi.sh
src/: call_event.rs  call_history.rs  call_note.rs  callback.rs  error.rs  lib.rs  phone_link.rs  validation.rs  wire.rs  ws_protocol.rs
tests/: msgpack_roundtrip.rs  roundtrip.rs
