[package]
name = "werkstatt-call-shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Shared data types for the werkstatt-call system (server ↔ client)"
license = "MIT OR Apache-2.0"

[features]
default = []
msgpack = ["dep:rmp-serde"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
garde = { version = "0.20", features = ["derive", "regex"] }
once_cell = "1"
regex = "1"
ts-rs = { version = "10", features = ["chrono-impl"] }
utoipa = { version = "4", features = ["chrono", "yaml"] }
rmp-serde = { version = "1", optional = true }

[[bin]]
name = "generate-ts"
path = "src/bin/generate_ts.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"
